[project]
name = "bach-sentiment_analysis"
version = "1.0.0"
description = "RapidAPI: twinword/sentiment-analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_sentiment_analysis = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-sentiment_analysis"
Repository = "https://github.com/bachstudio/bach-sentiment_analysis"
Documentation = "https://github.com/bachstudio/bach-sentiment_analysis#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'